# autoware_vision_pilot

./: .dockerignore  .gitignore
.github/workflows/: build-visionpilot-container.yaml
Docker/: Dockerfile
Models/: requirements-inference.txt
Models/model_library/AutoSpeed/: README.md
Simulation/CARLA/ROS2/: README.md  ego_speed_publisher.py  ros_carla_config.py  stage_carla_config.sh
Simulation/CARLA/ROS2/calibration/: generate_h_carla.py
Simulation/CARLA/ROS2/config/: VisionPilot_carla10.json  homography_C_matrix.yaml  visionpilot.carla.conf  visionpilot_ros2.carla.conf
Simulation/CARLA/ROS2/docker/: build_all.sh  down.sh  drive.sh
Simulation/CARLA/ROS2/src/carla_msgs/: package.xml
Simulation/CARLA/ROS2/src/visionpilot_carla_bridge/: README.md  package.xml  setup.py
VisionPilot/: .dockerignore  CMakeLists.txt  README.md  package.xml
VisionPilot/Docker/: Dockerfile  run.sh
VisionPilot/app/: CMakeLists.txt  control_bridge.cpp  control_bridge.hpp  vision_pilot.cpp
VisionPilot/config/: H_carla.yaml  vision_pilot.conf.example  vision_pilot_carla.conf.example  vision_pilot_test.conf
VisionPilot/development_releases/1.0/app/: vision_pilot.cpp  vision_pilot_config.cpp
VisionPilot/development_releases/1.0/modules/visualization/: CMakeLists.txt
VisionPilot/development_releases/1.0/tests/: CMakeLists.txt
VisionPilot/development_releases/1.0/tests/app/: CMakeLists.txt
VisionPilot/docker/: Dockerfile  build.sh  entrypoint.sh  run.sh
VisionPilot/models/: .gitignore
VisionPilot/modules/config/include/config/: vision_pilot_config.hpp
VisionPilot/modules/config/src/: vision_pilot_config.cpp
VisionPilot/modules/control/: CMakeLists.txt  README.md
VisionPilot/modules/control/include/control/: control_bridge.hpp  control_command.hpp  controller.hpp  dbw_adapter.hpp  dbw_sink.hpp  lateral_control.hpp  longitudinal_control.hpp
VisionPilot/modules/control/src/: control_bridge.cpp  controller.cpp  dbw_adapter.cpp  lateral_control.cpp  longitudinal_control.cpp
VisionPilot/modules/engine/src/: onnx_engine.cpp
VisionPilot/modules/middleware_interfaces/ros2_interface/control_cmd_publisher/: CMakeLists.txt
VisionPilot/modules/middleware_interfaces/ros2_interface/vehicle_state_subscriber/: CMakeLists.txt  README.md
VisionPilot/modules/models/include/models/: auto_drive.hpp
VisionPilot/modules/models/src/: auto_speed.cpp  auto_steer.cpp
VisionPilot/modules/safety_guardian/fusion/src/: longitudinal_fusion.cpp
VisionPilot/modules/safety_guardian/planning/: CMakeLists.txt
VisionPilot/modules/safety_guardian/planning/include/planning/: lateral_planning.hpp  planning.hpp
VisionPilot/modules/safety_guardian/planning/src/: lateral_planning.cpp  longitudinal_planning.cpp
VisionPilot/modules/visualization/src/: visualization.cpp
VisionPilot/tests/: CMakeLists.txt
VisionPilot/tests/app/: CMakeLists.txt  test_vision_pilot.cpp
VisionPilot/tests/control/: CMakeLists.txt  test_closed_loop.cpp  test_control.cpp  test_dbw_adapter.cpp
VisionPilot/tests/middleware_interfaces/ros2_interface/vehicle_state_subscriber/: CMakeLists.txt  test_vehicle_state_subscriber.cpp
VisionPilot/tests/safety_guardian/planning/: CMakeLists.txt  test_lateral_planning.cpp  test_planning.cpp
(+44 files in other folders)
